test_suite/tests/ui/remote/bad_remote.stderr
error: failed to parse path: "~~~"
  --> $DIR/bad_remote.rs:10:10
   |
10 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

